--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body></body>
+    <body>
+        <div id="root"></div>
+
+    </body>
     <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
-    <script></script>
+    <script>
+        const root = document.getElementById("root");
+        const span = React.createElement("span", {id: "my-span", style: {color:"red"}}, "Hello"); // html tag / property / content 
+        ReactDOM.render(span, root); // show it to user
+    </script>
 </html>
