--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body>
-        <div id="root"></div>
-
-    </body>
-    <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
-    <script>
-        const root = document.getElementById("root");
-        const span = React.createElement("span", {id: "my-span", style: {color:"red"}}, "Hello"); // html tag / property / content 
-        ReactDOM.render(span, root); // show it to user
-    </script>
+  <body>
+    <div id="root"></div>
+  </body>
+  <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
+  <script>
+    const root = document.getElementById("root");
+    const h3 = React.createElement(
+      "h3",
+      {
+        onMouseEnter: () => console.log("mouse enter"),
+      },
+      "Hello I'm a span"
+    ); // html tag / property / content
+    const btn = React.createElement(
+      "button",
+      {
+        onClick: () => console.log("I'm clicked"),
+      },
+      "Click me"
+    );
+    const container = React.createElement("div", null, [h3, btn]);
+    ReactDOM.render(container, root); // show it to user
+  </script>
 </html>
